# thoughtful-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
.github/workflows/: deploy.yaml
agent/: __init__.py  client.py  models.py  service.py
agent_config/: instructions.md
data/: foxen-kb.md  thoughtful-ai-kb.md
scripts/: scrape_website.py  setup_agent.py  teardown_agent.py
